syntax = "proto3";

package configure.api.configure.business.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "configure.api.configure.business.v1";
option java_outer_classname = "BusinessV1";

import "api/configure/business/configure_business.proto";
import "google/api/annotations.proto";
import "api/configure/business/configure_business_value.proto";

service Business{

  // ListBusiness 获取业务配置信息列表
  rpc ListBusiness (ListBusinessRequest) returns (ListBusinessReply) {
    option (google.api.http) = {
      get: "/configure/api/v1/businesses",
    };
  }

  // CreateBusiness 创建业务配置信息
  rpc CreateBusiness (CreateBusinessRequest) returns (CreateBusinessReply) {
    option (google.api.http) = {
      post: "/configure/api/v1/business",
      body: "*"
    };
  }

  // UpdateBusiness 更新业务配置信息
  rpc UpdateBusiness (UpdateBusinessRequest) returns (UpdateBusinessReply) {
    option (google.api.http) = {
      put: "/configure/api/v1/business",
      body: "*"
    };
  }

  // DeleteBusiness 删除业务配置信息
  rpc DeleteBusiness (DeleteBusinessRequest) returns (DeleteBusinessReply) {
    option (google.api.http) = {
      delete: "/configure/api/v1/business",
    };
  }

  // ListBusinessValue 获取业务配置值信息列表
  rpc ListBusinessValue (ListBusinessValueRequest) returns (ListBusinessValueReply) {
    option (google.api.http) = {
      get: "/configure/api/v1/business/values",
    };
  }

  // UpdateBusinessValue 更新业务配置值信息
  rpc UpdateBusinessValue (UpdateBusinessValueRequest) returns (UpdateBusinessValueReply) {
    option (google.api.http) = {
      put: "/configure/api/v1/business/values",
      body: "*"
    };
  }

}